--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -137,7 +137,7 @@
     <tank ID="Bat_Chatillon155_55" sName="B-C 155 55" lName="Bat.-Châtillon 155 55" />
     <tank ID="Bat_Chatillon155_58" sName="B-C 155 58" lName="Bat.-Châtillon 155 58" />
     <tank ID="Bat_Chatillon25t" sName="B-C 25 t" lName="Bat.-Châtillon 25 t" />
-    <tank ID="Bat_Chatillon25t_fallout" />
+    <tank ID="Bat_Chatillon25t_fallout" sName="B-C 25 t (П)" lName="Bat.-Châtillon 25 t (П)" />
     <tank ID="Bat_Chatillon25t_IGR" sName="B-C 25 t" lName="Bat.-Châtillon 25 t" />
     <tank ID="BDR_G1B" sName="BDR G1 B" lName="BDR G1 B" />
     <tank ID="Bison_I" sName="Bison" lName="Sturmpanzer I Bison" />
@@ -414,7 +414,7 @@
     <tank ID="G87_VK3002DB_V1" sName="VK 30.01 D" lName="VK 30.01 (D)" />
     <tank ID="G88_Indien_Panzer" sName="Indien-Pz." lName="Indien-Panzer" />
     <tank ID="G89_Leopard1" sName="Leopard 1" lName="Leopard 1" />
-    <tank ID="G89_Leopard1_fallout" />
+    <tank ID="G89_Leopard1_fallout" sName="Leopard 1 (П)" lName="Leopard 1 (П)" />
     <tank ID="G90_DW_II" sName="D.W. 2" lName="Durchbruchswagen 2" />
     <tank ID="G91_Pro_Ag_A" sName="Leopard PT A" lName="Leopard Prototyp A" />
     <tank ID="G92_VK7201" sName="VK 72.01 K" lName="VK 72.01 (K)" />
@@ -517,7 +517,7 @@
     <tank ID="Indien_Panzer" sName="Indien-Pz." lName="Indien-Panzer" />
     <tank ID="IS" sName="ИС" lName="ИС" />
     <tank ID="IS-3" sName="ИС-3" lName="ИС-3" />
-    <tank ID="IS-3_IGR" sName="ИС-3" lName="ИС-3" />
+    <tank ID="IS-3_IGR" sName="PC방 ИС-3" lName="ИС-3" />
     <tank ID="IS-4" sName="ИС-4" lName="ИС-4" />
     <tank ID="IS-7" sName="ИС-7" lName="ИС-7" />
     <tank ID="IS-7_fallout" sName="(А) ИС-7" lName="(А) ИС-7" />
@@ -565,7 +565,7 @@
     <tank ID="JagdTiger" sName="Jagdtiger" lName="Jagdtiger" />
     <tank ID="JagdTiger_SdKfz_185" sName="JgTig.8,8 cm" lName="8,8 cm Pak 43 Jagdtiger" />
     <tank ID="JagdTiger_SdKfz_185_IGR" sName="JgTig.8,8 cm" lName="8,8 cm Pak 43 Jagdtiger" />
-    <tank ID="Karl" />
+    <tank ID="Karl" sName="Karl" lName="Karl" />
     <tank ID="Ke_Ho" sName="Ke-Ho" lName="Type 5 Ke-Ho" />
     <tank ID="Ke_Ni" sName="Ke-Ni" lName="Type 98 Ke-Ni" />
     <tank ID="Ke_Ni_B" sName="Ke-Ni Otsu" lName="Type 98 Ke-Ni Otsu" />
@@ -636,17 +636,17 @@
     <tank ID="NC27" sName="R. Otsu" lName="Renault Otsu" />
     <tank ID="NC27_bot" sName="R. Otsu" lName="Renault Otsu" />
     <tank ID="Object_140" sName="Об. 140" lName="Объект 140" />
-    <tank ID="Object_140_fallout" />
+    <tank ID="Object_140_fallout" sName="Об. 140 (П)" lName="Объект 140 (П)" />
     <tank ID="Object_212" sName="212А" lName="212А" />
     <tank ID="Object_261" sName="Об. 261" lName="Объект 261" />
     <tank ID="Object_430" sName="Об. 430" lName="Объект 430" />
-    <tank ID="Object_704" />
+    <tank ID="Object_704" sName="Об. 704" lName="Объект 704" />
     <tank ID="Object_907" sName="Об. 907" lName="Объект 907" />
     <tank ID="Object_907A" sName="Об. 907A" lName="Объект 907A" />
     <tank ID="Object252" sName="ИС-6" lName="ИС-6" />
     <tank ID="Object263" sName="Об. 263" lName="Объект 263" />
     <tank ID="Object268" sName="Об. 268" lName="Объект 268" />
-    <tank ID="Object268_fallout" />
+    <tank ID="Object268_fallout" sName="Об. 268 (П)" lName="Объект 268 (П)" />
     <tank ID="Object416" sName="Об. 416" lName="Объект 416" />
     <tank ID="Observer" sName="Наблюдатель" lName="Наблюдатель" />
     <tank ID="Panther_II" sName="Panther II" lName="Panther II" />
@@ -670,11 +670,11 @@
     <tank ID="PzII" sName="Pz. II" lName="Pz.Kpfw. II" />
     <tank ID="PzII_J" sName="Pz. II J" lName="Pz.Kpfw. II Ausf. J" />
     <tank ID="PzII_Luchs" sName="Luchs" lName="Pz.Kpfw. II Luchs" />
-    <tank ID="PzIII" />
+    <tank ID="PzIII" sName="Pz. III" lName="Pz.Kpfw. III" />
     <tank ID="PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="PzIII_AusfJ" sName="Pz. III J" lName="Pz.Kpfw. III Ausf. J" />
     <tank ID="PzIII_IV" sName="Pz. III/IV" lName="Pz.Kpfw. III/IV" />
-    <tank ID="PzIII_training" />
+    <tank ID="PzIII_training" sName="Pz. III" lName="Pz.Kpfw. III" />
     <tank ID="PzIV" sName="Pz. IV" lName="Pz.Kpfw. IV" />
     <tank ID="PzIV_Hydro" sName="Pz. IV hydr." lName="Pz.Kpfw. IV hydrostat." />
     <tank ID="PzIV_schmalturm" sName="Pz. IV S." lName="Pz.Kpfw. IV Schmalturm" />
@@ -689,7 +689,7 @@
     <tank ID="PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
     <tank ID="PzVIB_Tiger_II_IGR" sName="Tiger II" lName="Tiger II" />
     <tank ID="PzVIB_Tiger_II_training" sName="Tiger II" lName="Tiger II" />
-    <tank ID="R00_Sfera" />
+    <tank ID="R00_Sfera" sName="ИС-360" lName="ИС-360" />
     <tank ID="R00_T_50_2" />
     <tank ID="R01_IS" sName="ИС" lName="ИС" />
     <tank ID="R02_SU-85" sName="СУ-85" lName="СУ-85" />
@@ -870,7 +870,7 @@
     <tank ID="STA_1_IGR" sName="STA-1" lName="STA-1" />
     <tank ID="StuG_40_AusfG" sName="StuG III G" lName="StuG III Ausf. G" />
     <tank ID="StuG_40_AusfG_IGR" sName="StuG III G" lName="StuG III Ausf. G" />
-    <tank ID="StuGIII" />
+    <tank ID="StuGIII" sName="StuG III" lName="StuG III" />
     <tank ID="Sturer_Emil" sName="St. Emil" lName="Sturer Emil" />
     <tank ID="Sturmpanzer_II" sName="St.Pz. II" lName="Sturmpanzer II" />
     <tank ID="SU_85I" sName="СУ-85И" lName="СУ-85И" />
@@ -898,7 +898,7 @@
     <tank ID="T1_E6" sName="T1E6" lName="T1E6" />
     <tank ID="T1_hvy" sName="T1 Heavy" lName="T1 Heavy Tank" />
     <tank ID="T110" sName="T110E5" lName="T110E5" />
-    <tank ID="T110_fallout" />
+    <tank ID="T110_fallout" sName="T110E5 (П)" lName="T110E5 (П)" />
     <tank ID="T110E3" sName="T110E3" lName="T110E3" />
     <tank ID="T110E4" sName="T110E4" lName="T110E4" />
     <tank ID="T-127" sName="Т-127" lName="Т-127" />
@@ -944,7 +944,7 @@
     <tank ID="T54E1" sName="T54E1" lName="T54E1" />
     <tank ID="T57" sName="T57" lName="T57" />
     <tank ID="T57_58" sName="T57 Heavy" lName="T57 Heavy Tank" />
-    <tank ID="T57_58_fallout" />
+    <tank ID="T57_58_fallout" sName="T57 Heavy (П)" lName="T57 Heavy Tank (П)" />
     <tank ID="T-60" sName="Т-60" lName="Т-60" />
     <tank ID="T62A" sName="Т-62А" lName="Т-62А" />
     <tank ID="T62A_sport" sName="Т-62А С." lName="Т-62А СПОРТ" />
@@ -957,7 +957,7 @@
     <tank ID="T71" sName="T71" lName="T71" />
     <tank ID="T71_IGR" sName="T71" lName="T71" />
     <tank ID="T80" sName="Т-80" lName="Т-80" />
-    <tank ID="T82" />
+    <tank ID="T82" sName="T82" lName="T82" />
     <tank ID="T92" sName="T92 HMC" lName="T92 HMC" />
     <tank ID="T95" sName="T95" lName="T95" />
     <tank ID="T95_E2" sName="T95E2" lName="T95E2" />
@@ -996,20 +996,31 @@
     <item ID="00_tank_tutorial" Name="Танковый полигон" />
     <item ID="01_karelia" Name="Карелия" />
     <item ID="02_malinovka" Name="Малиновка" />
+    <item ID="03_campania" Name="Провинция" />
     <item ID="04_himmelsdorf" Name="Химмельсдорф" />
     <item ID="05_prohorovka" Name="Прохоровка" />
     <item ID="06_ensk" Name="Энск" />
     <item ID="07_lakeville" Name="Ласвилль" />
     <item ID="08_ruinberg" Name="Руинберг" />
+    <item ID="10_hills" Name="Рудники" />
     <item ID="100_thepit" Name="Миттенгард" />
     <item ID="101_dday" Name="Оверлорд" />
+    <item ID="102_deathtrack" />
     <item ID="103_ruinberg_winter" Name="Винтерберг" />
-    <item ID="10_hills" Name="Рудники" />
+    <item ID="105_germany" Name="Берлин" />
+    <item ID="11_murovanka" Name="Мурованка" />
+    <item ID="111_paris" Name="Монте-Роза" />
+    <item ID="112_eiffel_tower" Name="Париж" />
     <item ID="112_eiffel_tower_ctf" Name="Париж" />
     <item ID="114_czech" Name="Промзона" />
-    <item ID="11_murovanka" Name="Мурованка" />
+    <item ID="116_himmelball" Name="Химмельштадион" />
+    <item ID="117_eiffelball" Name="Стад Эйфель" />
+    <item ID="118_lostcityball" Name="Заброшенный стадион" />
+    <item ID="119_moon_pool" Name="Лунопарк" />
+    <item ID="122_somme" Name="Начало эпохи" />
     <item ID="13_erlenberg" Name="Эрленберг" />
     <item ID="14_siegfried_line" Name="Линия Зигфрида" />
+    <item ID="15_komarin" Name="Комарин" />
     <item ID="17_munchen" Name="Уайдпарк" />
     <item ID="18_cliff" Name="Утёс" />
     <item ID="19_monastery" Name="Монастырь" />
@@ -1024,59 +1035,27 @@
     <item ID="36_fishing_bay" Name="Рыбацкая бухта" />
     <item ID="37_caucasus" Name="Перевал" />
     <item ID="38_mannerheim_line" Name="Заполярье" />
+    <item ID="39_crimea" Name="Южный берег" />
+    <item ID="43_north_america" Name="Северо-Запад" />
     <item ID="44_north_america" Name="Лайв Окс" />
     <item ID="45_north_america" Name="Хайвей" />
     <item ID="47_canada_a" Name="Тихий берег" />
+    <item ID="51_asia" Name="Хребет Дракона" />
+    <item ID="53_japan" Name="Скрытая деревня" />
     <item ID="59_asia_great_wall" Name="Граница империи" />
+    <item ID="60_asia_miao" Name="Жемчужная река" />
     <item ID="63_tundra" Name="Тундра" />
     <item ID="73_asia_korea" Name="Священная долина" />
     <item ID="83_kharkiv" Name="Харьков" />
     <item ID="84_winter" Name="Виндсторм" />
+    <item ID="85_winter" Name="Северогорск" />
     <item ID="86_himmelsdorf_winter" Name="Зимний Химмельсдорф" />
+    <item ID="87_ruinberg_on_fire" Name="Руинберг в огне" />
     <item ID="92_stalingrad" Name="Сталинград" />
+    <item ID="94_battlecity" />
     <item ID="95_lost_city" Name="Затерянный город" />
     <item ID="96_prohorovka_defense" Name="Огненная дуга" />
-    <item ID="h13_bovtankfest_2016" />
-    <item ID="03_campania" />
-    <item ID="15_komarin" />
-    <item ID="39_crimea" />
-    <item ID="43_north_america" />
-    <item ID="51_asia" />
-    <item ID="53_japan" />
-    <item ID="60_asia_miao" />
-    <item ID="85_winter" />
-    <item ID="87_ruinberg_on_fire" />
     <item ID="99_himmelball" />
-    <item ID="102_deathtrack" />
-    <item ID="111_paris" Name="Монте-Роза" />
-    <item ID="h01_bday_2015" />
-    <item ID="h02_tmday_2015" />
-    <item ID="105_germany" Name="Берлин" />
-    <item ID="112_eiffel_tower" Name="Париж" />
-    <item ID="h03_shopfest_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
-    <item ID="94_battlecity" />
-    <item ID="h07_newyear_2015" />
-    <item ID="h09_bday_cn_2016" />
-    <item ID="h11_wgl_grandfinal_2016" />
-    <item ID="h12_bday_eu_2015" />
-    <item ID="119_moon_pool" />
-    <item ID="h10_summer_holiday_2016" />
-    <item ID="116_himmelball" Name="Химмельштадион" />
-    <item ID="117_eiffelball" Name="Стад Эйфель" />
-    <item ID="118_lostcityball" Name="Заброшенный стадион" />
-    <item ID="h14_fevent_2016" />
-    <item ID="servercollision" />
-    <item ID="h15_gamescom_2016" />
-    <item ID="h16_wg_bday_2016" />
-    <item ID="h17_thgday_kr_2016" />
-    <item ID="h19_victory_day_cn" />
-    <item ID="122_somme" Name="Начало эпохи" />
-    <item ID="h18_bdtanks100_2016" />
-    <item ID="h08_kr_lnewyear_2015" />
-    <item ID="h09_bday_CN_2016" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_Maps>
   <Lang_Nations>
@@ -1130,7 +1109,14 @@
     <item ID="11" Name="Наступления" />
     <item ID="12" Name="Командный: игра в Ладдере" />
     <item ID="13" Name="Глобальная карта" />
+    <item ID="18" Name="«Превосходство»" />
+    <item ID="19" Name="«Стальная охота»" />
+    <item ID="20" Name="Вылазка" />
+    <item ID="21" Name="Наступление" />
+    <item ID="22" Name="Ранговый бой" />
     <item ID="17" Name="Учебный бой" />
+    <item ID="16" Name="Учебный бой" />
+    <item ID="14" Name="Турнир" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_BattleTypes>
   <Lang_FinishReasons>
@@ -1173,6 +1159,7 @@
     <item ID="3" Name="Разбит" />
     <item ID="4" Name="Уничтожен запретной зоной" />
     <item ID="5" Name="Затоплен" />
+    <item ID="6" Name="Уничтожен огненным валом" />
     <item ID="7" Name="Умышленное уничтожение собственной машины" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_DeathReasons>
