--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -8,6 +8,7 @@
     <tank ID="A01_T1_Cunningham_bot" sName="T1 科宁汉姆" lName="T1 科宁汉姆" />
     <tank ID="A02_M2_lt" sName="M2 轻型坦克" lName="M2 轻型坦克" />
     <tank ID="A03_M3_Stuart" sName="M3 \" lName="M3 \" />
+    <tank ID="A03_M3_Stuart_bootcamp" sName="M3 \" lName="M3 \" />
     <tank ID="A04_M3_Grant" sName="M3 \" lName="M3 \" />
     <tank ID="A05_M4_Sherman" sName="M4 \" lName="M4 \" />
     <tank ID="A05_M4_Sherman_IGR" sName="M4 \" lName="M4 \" />
@@ -49,10 +50,12 @@
     <tank ID="A-20" sName="A-20" lName="A-20" />
     <tank ID="A21_T14" sName="T14" lName="T14" />
     <tank ID="A22_M5_Stuart" sName="M5 \" lName="M5 \" />
+    <tank ID="A22_M5_Stuart_bootcamp" sName="M5 \" lName="M5 \" />
     <tank ID="A23_M7_med" sName="M7" lName="M7" />
     <tank ID="A24_T2_med" sName="T2 中型坦克" lName="T2中型坦克" />
     <tank ID="A24_T2_med_bot" sName="T2 中型坦克" lName="T2中型坦克" />
     <tank ID="A25_M2_med" sName="M2 中型坦克" lName="M2 中型坦克" />
+    <tank ID="A25_M2_med_bootcamp" sName="M2 中型坦克" lName="M2 中型坦克" />
     <tank ID="A26_T18" sName="T18" lName="T18" />
     <tank ID="A27_T82" sName="T82 HMC" lName="T82 HMC" />
     <tank ID="A29_T40" sName="T40" lName="T40" />
@@ -65,6 +68,7 @@
     <tank ID="A35_Pershing" sName="M26 \" lName="M26 \" />
     <tank ID="A35_Pershing_IGR" sName="M26 \" lName="M26 \" />
     <tank ID="A36_Sherman_Jumbo" sName="\" lName="\" />
+    <tank ID="A36_Sherman_Jumbo_bootcamp" sName="\" lName="\" />
     <tank ID="A36_Sherman_Jumbo_IGR" sName="“小飞象”" lName="“小飞象”" />
     <tank ID="A37_M40M43" sName="M40/M43" lName="M40/M43" />
     <tank ID="A38_T92" sName="T92" lName="T92" />
@@ -156,6 +160,7 @@
     <tank ID="Ch06_Renault_NC31_bot" sName="雷诺 NC-31" lName="雷诺 NC-31" />
     <tank ID="Ch07_Vickers_MkE_Type_BT26" sName="维克斯 Mk.E" lName="维克斯 Mk.E" />
     <tank ID="Ch08_Type97_Chi_Ha" sName="97式" lName="97式" />
+    <tank ID="Ch08_Type97_Chi_Ha_bootcamp" sName="97式" lName="97式" />
     <tank ID="Ch09_M5" sName="M5A1" lName="M5A1" />
     <tank ID="Ch10_IS2" sName="IS-2" lName="IS-2" />
     <tank ID="Ch11_110" sName="110" lName="110" />
@@ -172,14 +177,26 @@
     <tank ID="Ch20_Type58" sName="58式" lName="58式" />
     <tank ID="Ch21_T34" sName="T-34*" lName="T-34*" />
     <tank ID="Ch22_113" sName="113" lName="113" />
+    <tank ID="Ch22_113_Beijing_Opera" />
+    <tank ID="Ch22_113P" />
     <tank ID="Ch23_112" sName="112" lName="112" />
     <tank ID="Ch24_Type64" sName="64式" lName="64式" />
     <tank ID="Ch25_121_mod_1971B" sName="121B" lName="121B" />
     <tank ID="Ch26_59_Patton" sName="59-巴顿" lName="59-巴顿" />
     <tank ID="Ch28_WZ_132A" sName="WZ132A" lName="WZ132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ132-1" lName="WZ132-1" />
-    <tank ID="Ch39_WZ120_1G_FT" />
-    <tank ID="Ch40_WZ120G_FT" />
+    <tank ID="Ch30_T-26G_FT" />
+    <tank ID="Ch31_M3G_FT" />
+    <tank ID="Ch32_SU-76G_FT" />
+    <tank ID="Ch33_60G_FT" />
+    <tank ID="Ch34_WZ131G_FT" />
+    <tank ID="Ch35_T-34-2G_FT" />
+    <tank ID="Ch36_WZ111_1G_FT" />
+    <tank ID="Ch37_WZ111G_FT" />
+    <tank ID="Ch38_WZ113G_FT" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ120-1G FT" lName="WZ120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ120G FT" lName="WZ120G FT" />
+    <tank ID="Ch41_WZ_111_5A" />
     <tank ID="Chi_Ha" sName="九七中战" lName="九七中战" />
     <tank ID="Chi_He" sName="一式中战" lName="一式中战" />
     <tank ID="Chi_Ni" sName="九七原型车" lName="九七原型车" />
@@ -219,6 +236,7 @@
     <tank ID="F02_D1" sName="D1" lName="D1" />
     <tank ID="F03_D2" sName="D2" lName="D2" />
     <tank ID="F04_B1" sName="B1" lName="B1" />
+    <tank ID="F04_B1_bootcamp" sName="B1" lName="B1" />
     <tank ID="F05_BDR_G1B" sName="BDR G1 B" lName="BDR G1 B" />
     <tank ID="F06_ARL_44" sName="ARL 44" lName="ARL 44" />
     <tank ID="F07_AMX_M4_1945" sName="AMX M4(1945)" lName="AMX M4(1945)" />
@@ -280,6 +298,7 @@
     <tank ID="F84_Somua_SM" sName="索玛 SM" lName="索玛 SM" />
     <tank ID="F87_Batignolles-Chatillon_12t" sName="查狄伦 12t" lName="查狄伦 12t" />
     <tank ID="F88_AMX_13_105" sName="AMX 13 105" lName="AMX 13 105" />
+    <tank ID="F89_Canon_dassaut_de_105" />
     <tank ID="FCM_36Pak40" sName="FCM36 Pak40" lName="FCM 36 Pak40" />
     <tank ID="FCM_50t" sName="FCM 50t" lName="FCM 50t" />
     <tank ID="Ferdinand" sName="\" lName="\" />
@@ -289,6 +308,7 @@
     <tank ID="G_Tiger" sName="\" lName="\" />
     <tank ID="G02_Hummel" sName="\" lName="\" />
     <tank ID="G03_PzV_Panther" sName="\" lName="\" />
+    <tank ID="G03_PzV_Panther_bootcamp" sName="\" lName="\" />
     <tank ID="G03_PzV_Panther_IGR" sName="\" lName="\" />
     <tank ID="G03_PzV_Panther_training" sName="\" lName="\" />
     <tank ID="G04_PzVI_Tiger_I" sName="\" lName="\" />
@@ -300,12 +320,14 @@
     <tank ID="G06_PzII_bot" sName="II号坦克" lName="II号坦克" />
     <tank ID="G07_Pz35t" sName="35(t)型" lName="35(t)型" />
     <tank ID="G08_Pz38t" sName="38(t)型" lName="38(t)型" />
+    <tank ID="G08_Pz38t_bootcamp" sName="38(t)型" lName="38(t)型" />
     <tank ID="G09_Hetzer" sName="\" lName="\" />
     <tank ID="G10_PzIII_AusfJ" sName="III号坦克" lName="III号坦克" />
     <tank ID="G10_PzIII_AusfJ_training" sName="III号坦克" lName="III号坦克" />
     <tank ID="G100_Gtraktor_Krupp" sName="克虏伯试验车" lName="克虏伯试验车" />
     <tank ID="G101_StuG_III" sName="III号突击炮B型" lName="III号突击炮B型" />
     <tank ID="G102_Pz_III" sName="III号坦克E型" lName="III号坦克E型" />
+    <tank ID="G102_Pz_III_bootcamp" sName="III号坦克E型" lName="III号坦克E型" />
     <tank ID="G103_RU_251" sName="Ru251" lName="Ru251" />
     <tank ID="G104_Stug_IV" sName="IV号突击炮" lName="IV号突击炮" />
     <tank ID="G105_T-55_NVA_DDR" sName="T-55A" lName="T-55A" />
@@ -323,6 +345,7 @@
     <tank ID="G115_Typ_205B" sName="VK 10001(P)\" lName="VK 10001(P)\" />
     <tank ID="G116_Turan_III_prot" sName="突朗III型" lName="突朗III型" />
     <tank ID="G117_Toldi_III" sName="托蒂III型" lName="托蒂III型" />
+    <tank ID="G117_Toldi_III_bootcamp" sName="托蒂III型" lName="托蒂III型" />
     <tank ID="G118_VK4503" sName="VK 4503" lName="VK 4503" />
     <tank ID="G119_Panzer58" sName="58号试验型" lName="58号试验型" />
     <tank ID="G119_Panzer58_BF" sName="施瓦茨 58" lName="施瓦茨 58" />
@@ -336,8 +359,9 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm PW" lName="Rhm PW" />
     <tank ID="G126_HWK_12" sName="HWK12" lName="HWK12" />
     <tank ID="G13_VK3001H" sName="VK3001(H)" lName="VK3001(H)" />
-    <tank ID="G134_PzKpfw_VII" />
-    <tank ID="G136_Tiger_131" />
+    <tank ID="G134_PzKpfw_VII" sName="VK7201(K)" lName="VK7201(K)" />
+    <tank ID="G136_Tiger_131" sName="131号\" lName="131号\" />
+    <tank ID="G137_PzVI_Tiger_217" />
     <tank ID="G14_PzIII_A" sName="III号坦克E型" lName="III号坦克E型" />
     <tank ID="G15_VK3601H" sName="VK3601(H)" lName="VK3601(H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="\" lName="\" />
@@ -349,6 +373,7 @@
     <tank ID="G19_Wespe" sName="\" lName="\" />
     <tank ID="G20_Marder_II" sName="\" lName="\" />
     <tank ID="G21_PanzerJager_I" sName="I型突击炮" lName="I型突击炮" />
+    <tank ID="G21_PanzerJager_I_bootcamp" />
     <tank ID="G22_Sturmpanzer_II" sName="\" lName="\" />
     <tank ID="G23_Grille" sName="\" lName="\" />
     <tank ID="G24_VK3002DB" sName="VK3002(DB)" lName="VK3002(DB)" />
@@ -406,6 +431,7 @@
     <tank ID="G78_Panther_M10" sName="\" lName="\" />
     <tank ID="G79_Pz_IV_AusfGH" sName="IV号" lName="IV号坦克" />
     <tank ID="G80_Pz_IV_AusfD" sName="IV号D型" lName="IV号D型" />
+    <tank ID="G80_Pz_IV_AusfD_bootcamp" sName="IV号D型" lName="IV号D型" />
     <tank ID="G81_Pz_IV_AusfH" sName="IV号H型" lName="IV号H型" />
     <tank ID="G82_Pz_II_AusfG" sName="II号G型" lName="II号G型" />
     <tank ID="G83_Pz_IV_AusfA" sName="IV号A型" lName="IV号A型" />
@@ -427,12 +453,12 @@
     <tank ID="G98_Waffentrager_E100" sName="E-100 WT" lName="E-100 WT" />
     <tank ID="G99_RhB_Waffentrager" sName="Rhm·B WT" lName="Rhm·B WT" />
     <tank ID="GAZ-74b" sName="SU-85B" lName="SU-85B" />
-    <tank ID="GB01_Medium_Mark_I" sName="维克斯 MK.I" lName="维克斯 MK.I" />
-    <tank ID="GB01_Medium_Mark_I_bot" sName="维克斯 MK.I" lName="维克斯 MK.I" />
-    <tank ID="GB03_Cruiser_Mk_I" sName="MK.I巡洋坦克" lName="MK.I巡洋坦克" />
+    <tank ID="GB01_Medium_Mark_I" sName="维克斯 Mk.I" lName="维克斯 Mk.I" />
+    <tank ID="GB01_Medium_Mark_I_bot" sName="维克斯 Mk.I" lName="维克斯 Mk.I" />
+    <tank ID="GB03_Cruiser_Mk_I" sName="Mk.I巡洋坦克" lName="Mk.I巡洋坦克" />
     <tank ID="GB04_Valentine" sName="瓦伦丁" lName="瓦伦丁" />
-    <tank ID="GB05_Vickers_Medium_Mk_II" sName="维克斯 MK.II" lName="维克斯 MK.II" />
-    <tank ID="GB05_Vickers_Medium_Mk_II_bot" sName="维克斯 MK.II" lName="维克斯 MK.II" />
+    <tank ID="GB05_Vickers_Medium_Mk_II" sName="维克斯 Mk.II" lName="维克斯 Mk.II" />
+    <tank ID="GB05_Vickers_Medium_Mk_II_bot" sName="维克斯 Mk.II" lName="维克斯 Mk.II" />
     <tank ID="GB06_Vickers_Medium_Mk_III" sName="维克斯Mk.III" lName="维克斯Mk.III" />
     <tank ID="GB07_Matilda" sName="玛蒂尔达" lName="玛蒂尔达" />
     <tank ID="GB08_Churchill_I" sName="\" lName="\" />
@@ -452,8 +478,8 @@
     <tank ID="GB21_Cromwell" sName="克伦威尔" lName="克伦威尔" />
     <tank ID="GB21_Cromwell_IGR" sName="克伦威尔" lName="克伦威尔" />
     <tank ID="GB22_Comet" sName="彗星" lName="彗星" />
-    <tank ID="GB23_Centurion" sName="百夫长 MK.I" lName="百夫长(逊邱伦)Mk.I" />
-    <tank ID="GB23_Centurion_IGR" sName="百夫长 MK.I" lName="百夫长 MK.I" />
+    <tank ID="GB23_Centurion" sName="百夫长 Mk.I" lName="百夫长(逊邱伦)Mk.I" />
+    <tank ID="GB23_Centurion_IGR" sName="百夫长 Mk.I" lName="百夫长 MK.I" />
     <tank ID="GB24_Centurion_Mk3" sName="百夫长 Mk.VII" lName="百夫长(逊邱伦)Mk.VII" />
     <tank ID="GB25_Loyd_Carrier" sName="劳埃德 GC" lName="劳埃德 GC" />
     <tank ID="GB25_Loyd_Gun_Carriage" sName="劳埃德 GC" lName="劳埃德 GC" />
@@ -530,6 +556,7 @@
     <tank ID="J02_Te_Ke" sName="九七轻战" lName="九七轻战" />
     <tank ID="J03_Ha_Go" sName="九五轻战" lName="九五轻战" />
     <tank ID="J04_Ke_Ni" sName="九八轻战" lName="九八轻战" />
+    <tank ID="J04_Ke_Ni_bootcamp" sName="九八轻战" lName="九八轻战" />
     <tank ID="J05_Ke_Ni_B" sName="九八原型车" lName="九八原型车" />
     <tank ID="J06_Ke_Ho" sName="五式轻战" lName="五式轻战" />
     <tank ID="J07_Chi_Ha" sName="九七中战" lName="九七中战" />
@@ -550,14 +577,15 @@
     <tank ID="J20_Type_2605" sName="五式重战" lName="五式重战" />
     <tank ID="J21_Type_91" sName="九一式重战" lName="九一式重战" />
     <tank ID="J22_Type_95" sName="九五式重战" lName="九五式重战" />
+    <tank ID="J22_Type_95_bootcamp" sName="九五式重战" lName="九五式重战" />
     <tank ID="J23_Mi_To" sName="120吨试验型" lName="120吨试验型" />
     <tank ID="J24_Mi_To_130_tons" sName="120吨I型" lName="120吨I型" />
     <tank ID="J25_Type_4" sName="四式重战" lName="四式重战" />
     <tank ID="J26_Type_89" sName="八九式" lName="八九式" />
     <tank ID="J27_O_I_120" sName="120吨V型" lName="120吨V型" />
     <tank ID="J28_O_I_100" sName="120吨IV型" lName="120吨IV型" />
-    <tank ID="J29_Nameless" />
-    <tank ID="J30_Edelweiss" />
+    <tank ID="J29_Nameless" sName="无名" lName="无名" />
+    <tank ID="J30_Edelweiss" sName="雪绒花" lName="雪绒花" />
     <tank ID="JagdPanther" sName="\" lName="\" />
     <tank ID="JagdPantherII" sName="\" lName="\" />
     <tank ID="JagdPz_E100" sName="E-100坦克歼击车" lName="E-100坦克歼击车" />
@@ -655,6 +683,7 @@
     <tank ID="PanzerJager_I" sName="I型突击炮" lName="I型突击炮" />
     <tank ID="Pershing" sName="M26 \" lName="M26 \" />
     <tank ID="Pershing_IGR" sName="M26 \" lName="M26 \" />
+    <tank ID="Pl03_PzV_Poland" />
     <tank ID="Pro_Ag_A" sName="\" lName="\" />
     <tank ID="Pz_II_AusfG" sName="II号G型" lName="II号G型" />
     <tank ID="Pz_IV_AusfA" sName="IV号A型" lName="IV号A型" />
@@ -694,12 +723,16 @@
     <tank ID="R01_IS" sName="IS" lName="IS" />
     <tank ID="R02_SU-85" sName="SU-85" lName="SU-85" />
     <tank ID="R03_BT-7" sName="BT-7" lName="BT-7" />
+    <tank ID="R03_BT-7_bootcamp" sName="BT-7" lName="BT-7" />
     <tank ID="R04_T-34" sName="T-34" lName="T-34" />
     <tank ID="R05_KV" sName="KV" lName="KV" />
     <tank ID="R06_T-28" sName="T-28" lName="T-28" />
+    <tank ID="R06_T-28_bootcamp" sName="T-28" lName="T-28" />
     <tank ID="R07_T-34-85" sName="T-34-85" lName="T-34-85" />
+    <tank ID="R07_T-34-85_bootcamp" sName="T-34-85" lName="T-34-85" />
     <tank ID="R07_T-34-85_training" sName="T-34-85" lName="T-34-85" />
     <tank ID="R08_BT-2" sName="BT-2" lName="BT-2" />
+    <tank ID="R08_BT-2_bootcamp" />
     <tank ID="R09_T-26" sName="T-26" lName="T-26" />
     <tank ID="R09_T-26_bot" sName="T-26" lName="T-26" />
     <tank ID="R10_AT-1" sName="AT-1" lName="AT-1" />
@@ -741,9 +774,10 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="252工程" lName="252工程" />
     <tank ID="R134_Object_252U" sName="252工程" lName="252工程" />
-    <tank ID="R135_T_103" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
-    <tank ID="R143_T_29" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
+    <tank ID="R146_STG" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -754,6 +788,7 @@
     <tank ID="R20_T-44" sName="T-44" lName="T-44" />
     <tank ID="R20_T-44_IGR" sName="T-44" lName="T-44" />
     <tank ID="R22_T-46" sName="T-46" lName="T-46" />
+    <tank ID="R22_T-46_bootcamp" sName="T-46" lName="T-46" />
     <tank ID="R23_T-43" sName="T-43" lName="T-43" />
     <tank ID="R24_SU-76" sName="SU-76M" lName="SU-76M" />
     <tank ID="R25_GAZ-74b" sName="SU-85B" lName="SU-85B" />
@@ -772,6 +807,7 @@
     <tank ID="R41_T-50" sName="T-50" lName="T-50" />
     <tank ID="R42_T-60" sName="T-60" lName="T-60" />
     <tank ID="R43_T-70" sName="T-70" lName="T-70" />
+    <tank ID="R43_T-70_bootcamp" sName="T-70" lName="T-70" />
     <tank ID="R44_T80" sName="T-80" lName="T-80" />
     <tank ID="R45_IS-7" sName="IS-7" lName="IS-7" />
     <tank ID="R45_IS-7_fallout" sName="(R) IS-7" lName="(R) IS-7" />
@@ -781,6 +817,7 @@
     <tank ID="R47_ISU-152_IGR" sName="ISU-152" lName="ISU-152" />
     <tank ID="R49_SU100Y" sName="SU-100Y" lName="SU-100Y" />
     <tank ID="R50_SU76I" sName="SU-76I" lName="SU-76I" />
+    <tank ID="R50_SU76I_bootcamp" />
     <tank ID="R51_Object_212" sName="212工程" lName="212工程" />
     <tank ID="R52_Object_261" sName="261工程" lName="261工程" />
     <tank ID="R53_Object_704" sName="704工程" lName="704工程" />
@@ -810,6 +847,7 @@
     <tank ID="R81_IS8" sName="Т-10" lName="Т-10" />
     <tank ID="R84_Tetrarch_LL" sName="MK VII \" lName="MK VII \" />
     <tank ID="R86_LTP" sName="LTP" lName="LTP" />
+    <tank ID="R86_LTP_bootcamp" />
     <tank ID="R87_T62A" sName="T-62A" lName="T-62A" />
     <tank ID="R87_T62A_fallout" sName="(R)T-62A" lName="(R)T-62A" />
     <tank ID="R87_T62A_sport" sName="T-62A (S)型" lName="T-62A (S)型" />
@@ -857,6 +895,7 @@
     <tank ID="S21_UDES_03" sName="UDES 03" lName="UDES 03" />
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
+    <tank ID="S23_Strv_81_sabaton" />
     <tank ID="S35_captured" sName="S35 739(f)" lName="S35 739(f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
@@ -1068,6 +1107,7 @@
     <item ID="japan" Name="R系" />
     <item ID="czech" Name="J系" />
     <item ID="sweden" Name="V系" />
+    <item ID="poland" />
     <item ID="unknown" Name="未知" />
   </Lang_Nations>
   <Lang_Results>
@@ -1113,7 +1153,7 @@
     <item ID="19" Name="围猎战" />
     <item ID="20" Name="冲突战" />
     <item ID="21" Name="歼灭战" />
-    <item ID="22" />
+    <item ID="22" Name="排位赛" />
     <item ID="17" Name="PVE" />
     <item ID="16" Name="PVE" />
     <item ID="14" Name="锦标赛" />
@@ -2033,7 +2073,7 @@
     <PM name="SPG-15:战争之神" short="IV号突击炮: SPG-15" desc="一辆尽可能存活时间长的自行火炮才是团队的真正资产。一次又一次地开火，同时试着不要被敌人击中。在「扣下扳机」前花点时间多思考一下，因为「百发百中」对长时间装填的坦克才是最好的策略。" tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="迟来的支援" reward="IV号突击炮">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• 战斗结束时，获得的经验排名我方队伍前5。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少1000点伤害。</req>
+        <req>• 战斗结束时，获得的经验位于我方队伍前5。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少1000点伤害。</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• 在战斗中幸存。</req>
@@ -2708,7 +2748,7 @@
     <PM name="SPG-15:战争之神" short="T28(概念车): SPG-15" desc="一辆尽可能存活时间长的自行火炮才是团队的真正资产。一次又一次地开火，同时试着不要被敌人击中。在「扣下扳机」前花点时间多思考一下，因为「百发百中」对长时间装填的坦克才是最好的策略。" tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="迟来的支援" reward="T28(概念车)">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• 战斗结束时，获得的经验排名我方队伍前3。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少1500点伤害。</req>
+        <req>• 战斗结束时，获得的经验位于我方队伍前3。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少1500点伤害。</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• 在战斗中幸存。</req>
@@ -3383,7 +3423,7 @@
     <PM name="SPG-15:战争之神" short="T-55A: SPG-15" desc="一辆尽可能存活时间长的自行火炮才是团队的真正资产。一次又一次地开火，同时试着不要被敌人击中。在「扣下扳机」前花点时间多思考一下，因为「百发百中」对长时间装填的坦克才是最好的策略。" tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="T-55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• 战斗结束时，获得的经验排名我方队伍第1。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少2500点伤害。</req>
+        <req>• 战斗结束时，获得的经验位于我方队伍第1。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少2500点伤害。</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• 在战斗中幸存。</req>
@@ -4058,7 +4098,7 @@
     <PM name="SPG-15:战争之神" short="260工程: SPG-15" desc="一辆尽可能存活时间长的自行火炮才是团队的真正资产。一次又一次地开火，同时试着不要被敌人击中。在「扣下扳机」前花点时间多思考一下，因为「百发百中」对长时间装填的坦克才是最好的策略。" tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="迟来的支援" reward="260工程">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• 战斗结束时，获得的经验排名双方队伍第1。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少3500点伤害。</req>
+        <req>• 战斗结束时，获得的经验位于双方队伍第1。\n• 盟友对处于弹震状态或无法移动的敌方坦克造成至少3500点伤害。</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• 在战斗中幸存。</req>
